# Embedded_Playground

./: .gitignore  README.md
arduino/: create_library.md
arm/: armasm.md  armclang.md
arm/Assembler/: area.md  assembler.md  b.md  cps.md  dcd.md  end.md  endfunc_endp.md  entry.md  equ.md  export.md  export_global.md  function_proc.md  import_extern.md  nop.md  require8_preserve8.md  thumb.md
arm/cortex-m3/: core_registers.md  scb.md  systick.md
can/: can.md  can_fd.md  can_fd_frame.md  can_frame.md
i2c/: i2c.md
mbed/: mbed.md
mbed/ultrasonic/: ultrasonic.cpp  ultrasonic.h  ultrasonic_application.cpp
nucleo_f411re/: CMakeLists.txt  Makefile  README.md  configure.sh
nucleo_f411re/apps/hos/: hDeviceDriver.h  hKernel.c  hKernel.h  hMemory.c  hMemory.h  hMessageQueue.c  hMessageQueue.h  hScheduler.c  hScheduler.h  hTask.c  hTask.h  hTimer.c  hTimer.h
nucleo_f411re/drivers/cmsis/src/: syscalls.c
nucleo_f411re/drivers/stm32f4xx_hal/: stm32f4xx_hal_rtc.c  stm32f4xx_hal_timebase_rtc_alarm_template.c
nucleo_f411re/projects/stm32f411re-nucleo_freertos/: CMakeLists.txt  Makefile  main.c  stm32f4xx_hal_conf.h  stm32f4xx_it.c  stm32f4xx_it.h  uart.c
nucleo_f411re/projects/stm32f411re-nucleo_tdd/: CMakeLists.txt
nucleo_f411re/projects/stm32f411re-nucleo_timer/: Makefile  main.c  stm32f4xx_hal_conf.h  stm32f4xx_it.c  stm32f4xx_it.h  timer.c  timer.h
nucleo_f411re/projects/stm32f411re-nucleo_uart/: Makefile  build.sh  main.c  stm32f4xx_hal_conf.h  stm32f4xx_it.c  uart.h
nucleo_f411re/scripts/: bsp.mk  path.mk
nucleo_f411re/scripts/projects/: tdd.mk
nucleo_f411re/scripts/projects/tdd/: CMakeLists.txt
nucleo_f411re/scripts/temp/: app.mk  freertos.mk
nucleo_f411re/scripts/tools/: gcc.cmake  gcc.mk
nucleo_f411re/utils/: hDef.h
playground/: arm-none-eabi-as.md  arm-none-eabi-gcc.md  arm-none-eabi-ld.md  gcc_project-option.md
raspberrypi3/: alsa.md  bluetooth.md  config.md  wifi_ap.md
spi/: spi.md
