################################################################################
#	@brief		Top cmake file
#	@author		llHoYall <HoYa128@gmail.com>
#	@version	v1.0
#	@history
#		- 2018.12.05	Created.
################################################################################

cmake_minimum_required(VERSION 3.8)

project(global)

add_subdirectory(${CMAKE_SOURCE_DIR}/scripts/projects/tdd)
